# andy-cpp

./: .gitignore  1  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HUMAN.md  LICENSE  PLAN_upvalue_mutation.md  README.md  TODO.md  bench.sh  compare.sh  lsp  release-plz.toml  test.andy  ~
andy-cpp-macros/: Cargo.toml
andy-cpp-macros/src/: function.rs  lib.rs  match.rs
benches/: Cargo.toml  benchmark.rs  my_benchmark.rs
benches/programs/: ackermann.ndc  bigint.ndc  closures.ndc  enumerate_find.ndc  enumerate_for_loop.ndc  enumerate_take_small.ndc  enumerate_to_list.ndc  fibonacci.ndc  fibonacci_typed.ndc  hof_pipeline.ndc  map_literal_build.ndc  map_ops.ndc  matrix_mul.ndc  perlin.ndc  pi_approx.ndc  print_heavy.ndc  quicksort.ndc  sieve.ndc  string_concat.ndc  vec_hot_loop.ndc
benches/src/: benchmark.rs  output_sink.rs
ndc_bin/: Cargo.toml  build.rs
ndc_bin/src/: diagnostic.rs  docs.rs  highlighter.rs  main.rs  phase_timing.rs  repl.rs  span_tracer.rs
ndc_bin/tests/: deep_nesting.rs
ndc_interpreter/: Cargo.toml
ndc_interpreter/src/: environment.rs  function.rs  heap.rs  iterator.rs  lib.rs  num.rs  sequence.rs  timing.rs  value.rs  vm_bridge.rs
ndc_interpreter/src/evaluate/: index.rs  mod.rs
ndc_interpreter/src/interpreter/: function.rs  iterator.rs  mod.rs  sequence.rs
ndc_interpreter/src/semantic/: analyser.rs  mod.rs  scope.rs
ndc_lib/: Cargo.toml
ndc_lib/src/: hash_map.rs  interpreter.rs  lexer.rs  lib.rs  stdlib.rs
ndc_lib/src/ast/: expression.rs  mod.rs  operator.rs  parser.rs
ndc_lib/src/interpreter/: environment.rs  evaluate.rs  function.rs  heap.rs  int.rs  iterator.rs  mod.rs  num.rs  resolve.rs  sequence.rs  value.rs
ndc_lib/src/lexer/: mod.rs  span.rs  string.rs  token.rs
ndc_lib/src/stdlib/: aoc.rs  cmp.rs  deque.rs  file.rs  hash_map.rs  heap.rs  list.rs  math.rs  rand.rs  regex.rs  sequence.rs  serde.rs  string.rs  value.rs
ndc_lsp/: Cargo.toml
ndc_lsp/src/: backend.rs  diagnostics.rs  lib.rs  scope_resolve.rs  state.rs  visitor.rs
ndc_lsp/src/features/: completion.rs  definition.rs  hover.rs  inlay_hints.rs  mod.rs  symbols.rs
ndc_lsp/src/util/: mod.rs  position.rs
ndc_macros/: Cargo.toml
ndc_macros/src/: convert.rs  function.rs  lib.rs  match.rs  types.rs  vm_convert.rs
ndc_stdlib/: Cargo.toml
ndc_stdlib/src/: aoc.rs  base64.rs  cmp.rs  crypto.rs  deque.rs  file.rs  hash_map.rs  heap.rs  index.rs  lib.rs  list.rs  math.rs  rand.rs  regex.rs  sequence.rs  serde.rs  string.rs  value.rs
tests/: Cargo.toml  build.rs  lex.andy  programs.rs  scanner.andy
tests/compiler/: Cargo.toml
tests/compiler/tests/: compiler.rs  optimizer.rs
tests/functional/: Cargo.toml  build.rs
tests/functional/tests/: programs.rs  repl.rs
tests/programs/001_math/: 001_addition.ndc  001_addition.ndct  002_subtraction.ndc  002_subtraction.ndct  003_multiplication.ndc  003_multiplication.ndct  004_integer_division.ndc  004_integer_division.ndct  005_c_modulo.ndc  005_c_modulo.ndct  005_integer_comparison.ndc  005_integer_comparison.ndct  006_euclidean_modulo.ndc  006_euclidean_modulo.ndct  007_exponentiation.ndc  007_exponentiation.ndct  008_negation.ndc  008_negation.ndct  009_very_big_numbers.ndc  009_very_big_numbers.ndct  010_rational_numbers.ndc  010_rational_numbers.ndct  011_rational_math_with_ints.ndc  011_rational_math_with_ints.ndct  012_complex_math.ndc  012_complex_math.ndct  013_negative_integer_exponents.ndc  013_negative_integer_exponents.ndct  014_exponentiation_right_associative.ndc  014_exponentiation_right_associative.ndct  015_exponentiation_presedence.ndc  015_exponentiation_presedence.ndct  016_flexible_comparison.ndc  016_flexible_comparison.ndct  017_bigint_comparison.ndc  017_bigint_comparison.ndct  018_comprehensive_float.ndc  018_comprehensive_float.ndct  019_bit_operations.ndc  019_bit_operations.ndct  (+6 more)
tests/programs/002_boolean/: 001_not.ndc  001_not.ndct  002_comparison.ndc  002_comparison.ndct  003_logic.ndc  003_logic.ndct
tests/programs/003_string/: comparison.ndc  comparison.ndct  concatenation.ndc  concatenation.ndct  escape_sequences.ndc  escape_sequences.ndct  multiplication.ndc  multiplication.ndct  range_check.ndc  range_check.ndct
tests/programs/004_basic/: 001_grouping.ndc  001_grouping.ndct  002_create_variable.ndc  002_create_variable.ndct  003_create_multiple_variables.ndct  004_block_shadowing.ndc  004_block_shadowing.ndct  005_block_scope_destroys_local_variables.ndc  005_block_scope_destroys_local_variables.ndct  006_scopes_contain_expressions.ndc  006_scopes_contain_expressions.ndct  007_insane_nesting.ndc  007_insane_nesting.ndct  008_semicolon_requirement_after_block.ndc  008_semicolon_requirement_after_block.ndct  009_no_semicolon_freestanding.ndc  009_no_semicolon_freestanding.ndct  010_forgotten_closing_brace.ndc  010_forgotten_closing_brace.ndct  010_if_statement.ndc  010_if_statement.ndct  011_if_expression.ndc  011_if_expression.ndct  012_block_in_math_context.ndc  012_block_in_math_context.ndct  013_subtract_if_statements.ndc  013_subtract_if_statements.ndct  014_if_nesting.ndc  014_if_nesting.ndct  015_blocks_in_if_expressions.ndc  015_blocks_in_if_expressions.ndct  016_missing_block_crash.ndc  016_missing_block_crash.ndct  017_statements_evaluate_to_unit.ndc  017_statements_evaluate_to_unit.ndct  018_c_style_comments.ndc  018_c_style_comments.ndct  019_unbalanced_curly_brackets.ndc  019_unbalanced_curly_brackets.ndct  020_logical_operator_evaluation.ndc  (+55 more)
tests/programs/005_functions/: 001_add.ndc  001_add.ndct  002_recursive_factorial.ndc  002_recursive_factorial.ndct  003_error_in_function.ndc  003_error_in_function.ndct  004_closures.ndc  004_closures.ndct  005_closure_shadowing.ndc  005_closure_shadowing.ndct  006_closure_param_scope.ndc  006_closure_param_scope.ndct  007_print_function.ndc  007_print_function.ndct  008_call_result_of_call.ndc  008_call_result_of_call.ndct  009_return.ndc  010_return_outside_of_function.ndc  011_nested_return.ndc  016_dot_call.ndc  (+32 more)
tests/proptest/: Cargo.toml
tests/src/: compiler.rs  programs.rs  repl.rs
(+649 files in other folders)
