[workspace]
resolver = "3"
members = ["ndc_macros", "ndc_bin", "ndc_lib", "ndc_lsp", "ndc_lexer", "ndc_parser", "benches", "tests"]

[workspace.package]
edition = "2024"
publish = false
version = "0.2.1"
license = "MIT"

[workspace.dependencies]
ahash = { version = "0.8.12" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
derive_builder = { version = "0.20.2" }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut", "from", "display", "constructor"] }
factorial = "0.4.0"
itertools = "0.14.0"
ndc_lexer = { path = "ndc_lexer" }
ndc_lib = { path = "ndc_lib" }
ndc_parser = { path = "ndc_parser" }
ndc_lsp = { path = "ndc_lsp" }
ndc_macros = { path = "ndc_macros" }
num = "0.4.3"
once_cell = "1.21.3"
ordered-float = "5.1.0"
owo-colors = "4.3.0"
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.12.3"
rustyline = { version = "17.0.2", features = ["derive"] }
ryu = "1.0.23"
self_cell = "1.2.2"
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
strsim = "0.11.1"
tap = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"
