[workspace]
resolver = "3"
members = ["ndc_macros", "ndc_bin", "ndc_core", "ndc_analyser", "ndc_interpreter", "ndc_vm", "ndc_lsp", "ndc_lexer", "ndc_parser", "ndc_stdlib", "benches", "tests", "compiler_tests"]

[profile.release-with-debug]
inherits = "release"
debug = true

[workspace.package]
edition = "2024"
publish = false
version = "0.3.0"
license = "MIT"

[workspace.dependencies]
ahash = { version = "0.8.12" }
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
derive_builder = { version = "0.20.2" }
derive_more = { version = "2.1.1", features = ["deref", "deref_mut", "from", "display", "constructor"] }
factorial = "0.4.0"
itertools = "0.14.0"
ndc_core = { path = "ndc_core", version = "0.3.0" }
ndc_lexer = { path = "ndc_lexer", version = "0.3.0" }
ndc_analyser = { path = "ndc_analyser", version = "0.3.0" }
ndc_interpreter = { path = "ndc_interpreter", version = "0.3.0" }
ndc_vm = { path = "ndc_vm", version = "0.3.0" }
ndc_parser = { path = "ndc_parser", version = "0.3.0" }
ndc_lsp = { path = "ndc_lsp", version = "0.3.0" }
ndc_macros = { path = "ndc_macros", version = "0.1.0" }
ndc_stdlib = { path = "ndc_stdlib", version = "0.3.0" }
num = "0.4.3"
once_cell = "1.21.3"
ordered-float = "5.1.0"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
base64 = "0.22"
rand = "0.10.0"
rand_chacha = "0.10.0"
regex = "1.12.3"
rustyline = { version = "17.0.2", features = ["derive"] }
ryu = "1.0.23"
self_cell = "1.2.2"
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
strsim = "0.11.1"
tap = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-lsp = "0.20.0"
