[package]
name = "andy-cpp-macros"
version = "0.1.0"
edition = "2021"
authors = ["Tim Fennis <fennis.tim@gmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full", "extra-traits"] }
itertools = "0.12.1"
