[package]
name = "benches"
edition.workspace = true
license.workspace = true

[dependencies]
ndc_interpreter.workspace = true
ndc_stdlib.workspace = true
rand.workspace = true
criterion.workspace = true
rand_chacha.workspace = true


[[bench]]
name = "benchmark"
path = "src/benchmark.rs"
harness = false
