[package]
name = "ndc_bin"
version.workspace = true
edition.workspace = true
default-run = "ndc"

[[bin]]
name = "ndc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
strsim.workspace = true
miette.workspace = true
ndc_lib.workspace = true
owo-colors.workspace = true
rustyline.workspace = true
tap.workspace = true
termimad = "0.31.3"

