[package]
name = "ndc_bin"
version.workspace = true
edition.workspace = true
default-run = "ndc"

[[bin]]
name = "ndc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
strsim.workspace = true
miette.workspace = true
ndc_lib.workspace = true
owo-colors.workspace = true
rustyline.workspace = true
tap.workspace = true
termimad = "0.33.0"
ndc_lsp = { path = "../ndc_lsp", optional = true }
tokio = { version = "1.48.0", optional = true, features = ["full"] }

[features]
default = ["lsp"]
lsp = ["ndc_lsp", "tokio"]