[package]
name = "ndc_bin"
version.workspace = true
edition.workspace = true
default-run = "ndc"

[[bin]]
name = "ndc"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
itertools.workspace = true
strsim.workspace = true
codespan-reporting = "0.11.1"
ndc_lexer.workspace = true
ndc_parser.workspace = true
ndc_interpreter.workspace = true
ndc_stdlib.workspace = true
ndc_core.workspace = true
ndc_lsp.workspace = true
yansi.workspace = true
rustyline.workspace = true
termimad = "0.34.1"
tokio.workspace = true
