# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ndc_interpreter"
edition.workspace = true
version.workspace = true

[features]
vm-trace = ["ndc_vm/vm-trace"]

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
itertools.workspace = true
ndc_core.workspace = true
ndc_vm = { workspace = true }
ndc_lexer.workspace = true
ndc_parser.workspace = true
num.workspace = true
self_cell.workspace = true
thiserror.workspace = true
