# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ndc_interpreter"
edition.workspace = true
version.workspace = true

[features]
vm-trace = ["ndc_vm/vm-trace"]

[dependencies]
ndc_analyser.workspace = true
ndc_core.workspace = true
ndc_vm = { workspace = true }
ndc_lexer.workspace = true
ndc_parser.workspace = true
thiserror.workspace = true
