# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ndc_lib"
edition.workspace = true
version.workspace = true

[dependencies]
ahash = { workspace = true, optional = true }
anyhow.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
itertools.workspace = true
ndc_lexer.workspace = true
ndc_parser.workspace = true
num.workspace = true
ordered-float.workspace = true
ryu.workspace = true
self_cell.workspace = true
thiserror.workspace = true

[features]
default = ["ahash"]
ahash = ["dep:ahash"]
