# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ndc_lsp"
edition.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
ndc_analyser.workspace = true
ndc_lexer.workspace = true
ndc_interpreter.workspace = true
ndc_core.workspace = true
tower-lsp.workspace = true
ndc_parser.workspace = true

[dev-dependencies]
ndc_stdlib.workspace = true
