[package]
name = "ndc_macros"
version = "0.1.0"
edition = "2024"
authors = ["Tim Fennis <fennis.tim@gmail.com>"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
itertools.workspace = true
