[package]
name = "ndc_stdlib"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
factorial.workspace = true
itertools.workspace = true
ndc_core.workspace = true
ndc_macros.workspace = true
ndc_vm = { workspace = true }
num.workspace = true
once_cell.workspace = true
tap.workspace = true

# Optional
base64 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

# Crypto
md5 = { version = "0.8.0", optional = true }
sha1 = { version = "0.10.6", optional = true }

[features]
default = ["base64", "crypto", "rand", "regex", "serde"]
base64 = ["dep:base64"]
crypto = ["dep:md5", "dep:sha1"]
rand = ["dep:rand"]
regex = ["dep:regex"]
serde = ["dep:serde_json"]
